# festivalplaner

./: Cargo.toml  Dioxus.toml
assets/: main.css
src/: main.rs
