[package]
name = "festivalplaner"
version = "0.1.0"
authors = ["hatem.benbelgacem@outlook.com <hatem.benbelgacem@outlook.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

# Diese Abhängigkeiten werden NUR für das Server-Backend kompiliert,
# und beim WebAssembly-Build (Frontend) ignoriert.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
